Fixed footer readability

--- a/styles/base.css
+++ b/styles/base.css
@@ -75,6 +75,8 @@ h3 {
 footer {
     background-color: steelblue;
     color: white;
+    font-size: 14pt;
+    font-weight: bold;
 }
 
 #lastModified {
